<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.sunc.car.lovecar.bmob.User"/>
        <variable
            name="car"
            type="com.sunc.car.lovecar.bmob.Car"/>
    </data>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/window_background">
    <include
        layout="@layout/layout_title_bar"/>

    <RelativeLayout
        android:id="@+id/rl_avatar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/space_middle"
            android:layout_marginRight="@dimen/space_middle"
            app:load_asset='@{user.isMale() ? "bg_male": "bg_female"}'/>
        <LinearLayout
            android:layout_toRightOf="@id/iv_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/h16"
                android:text="@string/login_account"/>
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/h16"
                android:text="@{user.objectId}"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/iv_qrcode"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginRight="@dimen/space_middle"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/bg_qrcode"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_current_car"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginBottom="@dimen/space_large"
        style="@style/SettingColumn">
        <TextView
            style="@style/SettingName"
            android:text="@string/current_car"/>
        <TextView
            android:id="@+id/tv_current_car"
            style="@style/SettingValue"
            android:text="@{car.name}"/>
    </RelativeLayout>
    <View
        style="@style/HorizontalLine"/>
    <RelativeLayout
        android:id="@+id/rl_mobile"
        style="@style/SettingColumn">
        <TextView
            style="@style/SettingName"
            android:text="@string/mobile"/>
        <TextView
            android:id="@+id/tv_mobile"
            style="@style/SettingValue"
            android:text="@{user.mobilePhoneNumber}"/>
        <View
            android:layout_alignParentBottom="true"
            style="@style/HorizontalLine"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_sex"
        style="@style/SettingColumn">
        <TextView
            style="@style/SettingName"
            android:text="@string/setting_sex"/>
        <TextView
            android:id="@+id/tv_sex"
            style="@style/SettingValue"
            android:text="@{user.sexDes()}"/>
    </RelativeLayout>
    <View
        style="@style/HorizontalLine"/>
    <RelativeLayout
        android:id="@+id/rl_age"
        style="@style/SettingColumn">
        <TextView
            style="@style/SettingName"
            android:text="@string/setting_age"/>
        <TextView
            android:id="@+id/tv_age"
            style="@style/SettingValue"
            android:text="@{user.ageDes()}"/>
    </RelativeLayout>
    <View
        style="@style/HorizontalLine"/>
    <RelativeLayout
        android:id="@+id/rl_work"
        style="@style/SettingColumn">
        <TextView
            style="@style/SettingName"
            android:text="@string/setting_work"/>
        <TextView
            android:id="@+id/tv_work"
            style="@style/SettingValue"
            android:text="@{user.work}"/>
    </RelativeLayout>
    <View
        style="@style/HorizontalLine"/>

    <Button
        android:id="@+id/btn_login_out"
        android:textColor="@color/white"
        android:background="@drawable/bg_round100_rect_rede46d66"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/space_middle"
        android:layout_marginRight="@dimen/space_middle"
        android:layout_marginTop="@dimen/space_middle"
        android:text="@string/login_out"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tv_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/main_content_color"
        android:textSize="@dimen/h12"
        android:text="@string/feed_back"
        android:layout_marginBottom="@dimen/space_normal"/>
</LinearLayout>
</layout>