<?xml version="1.0" encoding="utf-8"?>
<layout >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/layout_title_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_xxxlarge"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_mount_sum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:text="@string/oil_total_weight"/>
        <TextView
            android:id="@+id/tv_fee_sum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:text="@string/oil_total_fee"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_oil"
                android:tint="@color/main_color_normal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/textColorPrimaryLight"
                android:textSize="@dimen/h12"
                android:text="@string/oil_average_weight"/>
            <TextView
                android:id="@+id/tv_mount_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/space_normal"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/h18"
                android:text="0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_money"
                android:tint="@color/main_color_normal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/textColorPrimaryLight"
                android:textSize="@dimen/h12"
                android:text="@string/oil_average_fee"/>
            <TextView
                android:id="@+id/tv_fee_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/space_normal"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/h18"
                android:text="0"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_current_car"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_xxlarge"
        android:background="@color/main_color_normal"
        android:gravity="center"
        android:text="@string/current_car"
        android:textColor="@color/white"
        android:textSize="@dimen/h12"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_xxxxlarge"
        android:gravity="center"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_add_record"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/btn_blue_selector"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/h14"
            android:text="@string/oil_add_record"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/footbar_size">
    </FrameLayout>
</LinearLayout>
</layout>